--- a/test_offline.html
+++ b/test_offline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Học Ngoại Ngữ</title>
+    <title>Thi Quoc Tich</title>
     <style>    
         body {
             font-family: 'Arial', sans-serif;
@@ -187,6 +187,7 @@
     </style>
 </head>
 <body>
+<a href="help.html" style="position: fixed; top: 20px; right: 20px; padding: 10px; background-color: #61dafb; color: #282c34; text-decoration: none; border-radius: 4px;">Help / Trợ giúp</a>
 
 <div style="text-align: center;">
     <div id="questionCounter">Câu hỏi: 0/0</div>
@@ -211,8 +212,8 @@
     <p><span id="recognizedSpeech"></span></p>
 </div>
 
-<textarea id="answerInput" placeholder="Viết Mặt Trước...(V1). Nói Mặt Trước...(N1)" onkeydown="handleKeyDown(event)"></textarea>
-<textarea id="writingCheckBack" placeholder="Viết Mặt Sau...(V2). Nói Mặt Sau...(N2)" onkeydown="handleKeyDownBack(event)"></textarea>
+<textarea id="answerInput" placeholder="Viết Câu hỏi...(V1). Nói Câu hỏi...(N1)" onkeydown="handleKeyDown(event)"></textarea>
+<textarea id="writingCheckBack" placeholder="Viết Trả lời...(V2). Nói Trả lời...(N2)" onkeydown="handleKeyDownBack(event)"></textarea>
 
 <!-- Nhóm các nút kiểm tra -->
 <div style="text-align: center;">
@@ -587,7 +588,6 @@ function playPronunciation(text) {
     }
 }
 
-
 function repeatPronunciation() {
     if (currentPronunciationText) {
         playPronunciation(currentPronunciationText);
@@ -703,7 +703,6 @@ function checkAnswerBack() {
     }
 }
 
-
     function startSpeechRecognition() {
         if (!('webkitSpeechRecognition' in window)) {
             alert("Trình duyệt của bạn không hỗ trợ nhận diện giọng nói.");
@@ -749,29 +748,36 @@ function checkAnswerBack() {
     }
 
     function startSpeechRecognitionFront() {
-        if (!('webkitSpeechRecognition' in window)) {
-            alert("Trình duyệt của bạn không hỗ trợ nhận diện giọng nói.");
-            return;
-        }
-        const recognitionFront = new webkitSpeechRecognition();
-        recognitionFront.lang = 'en-US';
-        recognitionFront.interimResults = false;
-        recognitionFront.maxAlternatives = 1;
-        recognitionFront.start();
-        recognitionFront.onresult = function(event) {
-            const speechResult = event.results[0][0].transcript;
-            document.getElementById('recognizedSpeech').textContent = speechResult;
-            document.getElementById('speechResult').style.display = 'block';
-            checkSpeechAnswerFront(speechResult);
-        };
-        recognitionFront.onerror = function(event) {
-            console.error("Lỗi nhận diện giọng nói: ", event.error);
-            alert("Có lỗi xảy ra khi nhận diện giọng nói. Vui lòng thử lại.");
-        };
-        recognitionFront.onend = function() {
-            // Xử lý khi nhận diện kết thúc nếu cần
-        };
+    if (!('webkitSpeechRecognition' in window)) {
+        alert("Trình duyệt của bạn không hỗ trợ nhận diện giọng nói.");
+        return;
     }
+    const recognitionFront = new webkitSpeechRecognition();
+    recognitionFront.lang = 'en-US';
+    recognitionFront.interimResults = false;
+    recognitionFront.maxAlternatives = 1;
+
+    recognitionFront.onresult = function(event) {
+        const speechResult = event.results[0][0].transcript;
+        document.getElementById('recognizedSpeech').textContent = speechResult;
+        document.getElementById('speechResult').style.display = 'block';
+        checkSpeechAnswerFront(speechResult);
+        recognitionFront.stop(); // Stop recognition after speech is processed
+    };
+
+    recognitionFront.onerror = function(event) {
+        console.error("Lỗi nhận diện giọng nói: ", event.error);
+        alert("Có lỗi xảy ra khi nhận diện giọng nói. Vui lòng thử lại.");
+        recognitionFront.stop(); // Consider stopping recognition on error
+    };
+
+    recognitionFront.onend = function() {
+        // This event is triggered when the speech recognition service has disconnected.
+        // You can add code here to handle restarts or cleanup.
+    };
+
+    recognitionFront.start(); // Start recognition
+}
 
     function checkSpeechAnswerFront(speechResult) {
         const word = vocabList[currentIndex];
