--- a/test_offline.html
+++ b/test_offline.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thi Quoc Tich</title>
-    <style>
+    <title>Học Đàm Thoại tiếng Anh</title>
+    <style>    
         body {
             font-family: 'Arial', sans-serif;
             background-color: #282c34;
@@ -193,21 +193,37 @@
     <div id="questionCounter">Câu hỏi: 0/0</div>
 </div>
 <div id="vocabLabel">Không có từ vựng nào được thêm.</div>
+
+<!--Nhóm các nút đổi màu-->
+<div style="text-align: center;">
+<label>  
+    <input type="checkbox" onchange="toggleVisibility('term')"> Ẩn En  
+</label>  
+<label>  
+    <input type="checkbox" onchange="toggleVisibility('ipa')"> Ẩn IPA  
+</label>  
+<label>  
+    <input type="checkbox" onchange="toggleVisibility('vietnamese')"> Ẩn Vi  
+</label>
+</div>
+
+<div id="notification"></div>
 <div id="speechResult">
     <p><span id="recognizedSpeech"></span></p>
 </div>
 
-<textarea id="answerInput" placeholder="Viết Câu hỏi...(V1). Nói Câu hỏi...(N1)" onkeydown="handleKeyDown(event)"></textarea>
-<textarea id="writingCheckBack" placeholder="Viết Trả lời...(V2). Nói Trả lời...(N2)" onkeydown="handleKeyDownBack(event)"></textarea>
+<textarea id="answerInput" placeholder="Kiểm Tra Viết Câu Hỏi (V1)" onkeydown="handleKeyDown(event)"></textarea>
+<textarea id="writingCheckBack" placeholder="Kiểm Tra Viết Câu Trả Lời (V2)
+" onkeydown="handleKeyDownBack(event)"></textarea>
 
 <!-- Nhóm các nút kiểm tra -->
-<div class="controls">
+<div style="text-align: center;">
     <button id="checkAnswerButton" onclick="checkAnswer()">V1</button>
     <button id="checkAnswerBackButton" onclick="checkAnswerBack()">V2</button>
-    <button id="speakCheckFrontButton" onclick="startSpeechRecognitionFront()">N1</button>
-    <button id="speakCheckButton" onclick="startSpeechRecognitionBack()">N2</button>
+    <button id="speakCheckFrontButton" onclick="startSpeechRecognitionFront()">Nói</button>    
 </div>
 
+<div class="controls"></div>
 <button onclick="prevWord()">Trước</button>
 <button onclick="flipCard()">Lật Thẻ</button>
 <button onclick="nextWord()">Tiếp Theo</button>
@@ -222,15 +238,14 @@
 <select id="lessonSelector" onchange="loadLesson()">
     <!-- Các tùy chọn sẽ được thêm tự động từ json_list.json -->
 </select>
-<input type="number" id="startQuestion" placeholder="Câu BĐ" min="1" max="138">
-<input type="number" id="questionCount" placeholder="SL câu" min="1" max="138">
+<input type="number" id="startQuestion" placeholder="Bắt đầu" min="1" max="138">
+<input type="number" id="questionCount" placeholder="Tổng số" min="1" max="138">
 <button onclick="startSession()">Bắt Đầu Phiên Học</button>
-
+ 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
-<script>
-// All existing JavaScript functionality remains as is
 
+<script>
     let vocabList = []; // Danh sách từ vựng
     let currentIndex = 0; // Vị trí từ hiện tại
     let autoFlip = false;
@@ -481,11 +496,8 @@
                 break;
             case 'ArrowUp':
                 repeatPronunciation();
-                break;
+                break;            
             case 'End':
-                startSpeechRecognition();
-                break;
-            case 'Home':
                 startSpeechRecognitionFront();
                 break;
             case 'Insert':
@@ -572,6 +584,7 @@ function playPronunciation(text) {
         console.log("Không tìm thấy file âm thanh cho từ:", text);
     }
 }
+
 
 function repeatPronunciation() {
     if (currentPronunciationText) {
@@ -686,103 +699,39 @@ function checkAnswerBack() {
         flipCardToBack();
         playPronunciation(vocabList[currentIndex][3]);
     }
-}
-
-// Add the new unified speech recognition functions here
-
-function startSpeechRecognition(isFront) {
-    if ('webkitSpeechRecognition' in window) {
-        setupSpeechRecognition(isFront, webkitSpeechRecognition);
-    } else if ('SpeechRecognition' in window) {
-        setupSpeechRecognition(isFront, SpeechRecognition);
-    } else {
-        alert("Your browser does not support speech recognition.");
-    }
-}
-
-function setupSpeechRecognition(isFront, RecognitionClass) {
-    const recognition = new RecognitionClass();
-    recognition.lang = 'en-US';
-    recognition.interimResults = false;
-    recognition.maxAlternatives = 1;
-    recognition.onresult = function(event) {
-        handleRecognitionResult(event, isFront);
-    };
-    recognition.onerror = function(event) {
-        console.error("Speech recognition error: ", event.error);
-        alert("An error occurred during speech recognition. Please try again.");
-    };
-    recognition.onend = function() {
-        console.log("Recognition session ended.");
-    };
-    recognition.start();
-}
-
-function handleRecognitionResult(event, isFront) {
-    const speechResult = event.results[0][0].transcript;
-    document.getElementById('recognizedSpeech').textContent = speechResult;
-    document.getElementById('speechResult').style.display = 'block';
-    if (isFront) {
-        checkSpeechAnswerFront(speechResult);
-    } else {
-        checkSpeechAnswer(speechResult);
-    }
-}
+}    
 
 function startSpeechRecognitionFront() {
-    startSpeechRecognition(true);
-}
-
-function startSpeechRecognition() {
-        if (!('webkitSpeechRecognition' in window)) {
-            alert("Trình duyệt của bạn không hỗ trợ nhận diện giọng nói.");
-            return;
-        }
-        recognition = new webkitSpeechRecognition();
-        recognition.lang = 'en-US';
-        recognition.interimResults = false;
-        recognition.maxAlternatives = 1;
-        recognition.start();
-        isSpeechRecognitionActive = true;
-        recognition.onresult = function(event) {
-            const speechResult = event.results[0][0].transcript;
-            document.getElementById('recognizedSpeech').textContent = speechResult;
-            document.getElementById('speechResult').style.display = 'block';
-            checkSpeechAnswer(speechResult);
-        };
-        recognition.onerror = function(event) {
-            console.error("Lỗi nhận diện giọng nói: ", event.error);
-            alert("Có lỗi xảy ra khi nhận diện giọng nói. Vui lòng thử lại.");
-            isSpeechRecognitionActive = false;
-        };
-        recognition.onend = function() {
-            isSpeechRecognitionActive = false;
-        };
+    if (!('webkitSpeechRecognition' in window)) {
+        alert("Trình duyệt của bạn không hỗ trợ nhận diện giọng nói.");
+        return;
     }
+    const recognitionFront = new webkitSpeechRecognition();
+    recognitionFront.lang = 'en-US';
+    recognitionFront.interimResults = false;
+    recognitionFront.maxAlternatives = 1;
 
-function startSpeechRecognitionBack() {
-    startSpeechRecognition(false);
+    recognitionFront.onresult = function(event) {
+        const speechResult = event.results[0][0].transcript;
+        document.getElementById('recognizedSpeech').textContent = speechResult;
+        document.getElementById('speechResult').style.display = 'block';
+        recognitionFront.stop(); // Stop recognition after speech is processed
+    };
+
+    recognitionFront.onerror = function(event) {
+        console.error("Lỗi nhận diện giọng nói: ", event.error);
+        alert("Có lỗi xảy ra khi nhận diện giọng nói. Vui lòng thử lại.");
+        recognitionFront.stop(); // Consider stopping recognition on error
+    };
+
+    recognitionFront.onend = function() {
+        // This event is triggered when the speech recognition service has disconnected.
+        // You can add code here to handle restarts or cleanup.
+    };
+
+    recognitionFront.start(); // Start recognition
 }
-
-function checkSpeechAnswer(speechResult) {
-        const word = vocabList[currentIndex];
-        const correctAnswer = removePunctuation(word[3].toString().trim().toLowerCase());
-        const userAnswer = removePunctuation(speechResult.trim().toLowerCase());
-        if (userAnswer === correctAnswer) {
-            showNotification("Đúng!", true);
-            playPronunciation(word[3]);
-            setTimeout(() => {
-                nextWord();
-            }, 3000);
-        } else {
-            showNotification("Sai!", false);
-            flipCardToBack();
-            playPronunciation(word[3]);
-        }
-    }
-
-
-function checkSpeechAnswerFront(speechResult) {
+    function checkSpeechAnswerFront(speechResult) {
         const word = vocabList[currentIndex];
         const expectedText = isFront ? word[0] : word[3];
         const normalizedExpectedText = removePunctuation(expectedText.toString().trim().toLowerCase());
@@ -813,8 +762,6 @@ function checkSpeechAnswerFront(speechResult) {
         loadLessonList();
         loadDifficultWords(); // Tải danh sách câu khó
     };
-
-// Remainder of your existing JavaScript code...
 </script>
 </body>
 </html>
