Cập nhật toàn bộ

--- a/ViEnSpeaking.html
+++ b/ViEnSpeaking.html
@@ -64,11 +64,10 @@
   <!-- Thêm vào đầu file, sau thẻ <body> -->
 <div style="position: fixed; top: 10px; right: 10px; z-index: 1000;">
   <select id="appSelector" onchange="switchApp()" style="padding: 8px; border-radius: 5px; background: #333; color: white;">
-    <option value="">-- Chọn ứng dụng --</option>
     <option value="ViEnSpeaking.html" selected>Luyện Nói Vi-En</option>
-    <option value="EnEnSpeaking.html">Luyện Nói En-En</option>
+    <option value="En_Spea_Writ.html">Nói Viết En</option>
     <option value="test_offline.html">Học Ngoại Ngữ</option>
-    <option value="ViEnRolePlay.html">Đóng Vai</option>
+    <option value="EnAnswering.html">Trả Lời tiếng Anh</option>
   </select>
 </div>
 
