Cap nhat ung dung

--- a/japanese_test.html
+++ b/japanese_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAPANESE 2 VOICES</title>
+    <title>Học Tiếng Nhật (4 cột)</title>
     <style>    
         body {
             font-family: 'Arial', sans-serif;
@@ -237,7 +237,9 @@
     <div style="position: fixed; top: 10px; right: 10px; z-index: 1000;">
         <select id="appSelector" onchange="switchApp()" style="padding: 8px; border-radius: 5px; background: #333; color: white;">
           <option value="">-- Select App --</option>
-          <option value="test_japan.html" selected>Học Tiếng Nhật</option>          
+          <option value="test_japan.html" selected>Học Tiếng Nhật</option>
+          <option value="test_offline.html">Học Ngoại Ngữ (6 cột)</option>
+          <option value="EnglishPractice.html">English Practice</option>
         </select>
     </div>
 <div style="text-align: center;">
@@ -276,6 +278,13 @@
     <button id="checkAnswerV2Button" onclick="checkAnswerV2()">V2</button>
     <button id="checkAnswerV3Button" onclick="checkAnswerV3()">V3</button>
     <button id="checkAnswerV4Button" onclick="checkAnswerV4()">V4</button>
+</div>
+
+<div style="text-align: center; margin-top: 6px;">
+    <label style="margin-right:10px;"><input type="checkbox" id="hideV1Checkbox" onchange="toggleVFrame(1)"> Ẩn V1</label>
+    <label style="margin-right:10px;"><input type="checkbox" id="hideV2Checkbox" onchange="toggleVFrame(2)"> Ẩn V2</label>
+    <label style="margin-right:10px;"><input type="checkbox" id="hideV3Checkbox" onchange="toggleVFrame(3)"> Ẩn V3</label>
+    <label style="margin-right:10px;"><input type="checkbox" id="hideV4Checkbox" onchange="toggleVFrame(4)"> Ẩn V4</label>
 </div>
 
 <div style="text-align: center;">
@@ -487,6 +496,30 @@
         hiddenElements[element] = !hiddenElements[element];
         displayWord();  
     }  
+
+    // Toggle visibility for the 4 writing frames (V1..V4)
+    // Behavior: checkbox checked => HIDE (matches other "Ẩn ..." checkboxes)
+    function toggleVFrame(n) {
+        const map = {
+            1: {ta: 'answerInput', btn: 'checkAnswerButton'},
+            2: {ta: 'answerInputV2', btn: 'checkAnswerV2Button'},
+            3: {ta: 'answerInputV3', btn: 'checkAnswerV3Button'},
+            4: {ta: 'answerInputV4', btn: 'checkAnswerV4Button'}
+        };
+        const cb = document.getElementById('hideV' + n + 'Checkbox');
+        const target = map[n];
+        if (!target || !cb) return;
+        const ta = document.getElementById(target.ta);
+        const btn = document.getElementById(target.btn);
+        if (cb.checked) {
+            if (ta) ta.style.display = 'none';
+            if (btn) btn.style.display = 'none';
+            try { if (ta && document.activeElement === ta) ta.blur(); } catch (e) {}
+        } else {
+            if (ta) ta.style.display = 'block';
+            if (btn) btn.style.display = 'inline-block';
+        }
+    }
 
     function updateQuestionCounter() {
         const questionCounter = document.getElementById('questionCounter');
@@ -1286,6 +1319,13 @@
                 }
             });
         }
+        // initialize V-frame visibility to match checkboxes (unchecked = visible)
+        try {
+            toggleVFrame(1);
+            toggleVFrame(2);
+            toggleVFrame(3);
+            toggleVFrame(4);
+        } catch (e) {}
         // Kuroshiro/kuromoji scripts removed to avoid blocking on GitHub Pages.
         // The app will use romaji-based fallbacks instead.
     };
