--- a/japanese_test.html
+++ b/japanese_test.html
@@ -234,15 +234,11 @@
     </style>
 </head>
 <body>
-    <div style="position: fixed; top: 10px; right: 10px; z-index: 1000;">
-        <select id="appSelector" onchange="switchApp()" style="padding: 8px; border-radius: 5px; background: #333; color: white;">
-          <option value="">-- Select App --</option>
-          <option value="test_japan.html" selected>Học Tiếng Nhật</option>
-          <option value="test_offline.html">Học Ngoại Ngữ (6 cột)</option>
-          <option value="EnglishPractice.html">English Practice</option>
-        </select>
+    <div style="position:fixed; top:10px; right:10px; z-index:999;">
+        <a href="help.html" target="_blank" style="background:#61dafb;color:#08212b;padding:8px 12px;border-radius:6px;text-decoration:none;font-weight:bold;">Hướng dẫn</a>
     </div>
-<div style="text-align: center;">
+    
+    <div style="text-align: center;">
     <div id="questionCounter">Câu hỏi: 0/0</div>
 </div>
 <div id="vocabLabel">Không có từ vựng nào được thêm.</div>
@@ -261,7 +257,7 @@
     <input type="checkbox" onchange="toggleVisibility('vietnamese')"> Ẩn Vi  
 </label>
 <label>  
-    <input type="checkbox" id="autoCheckToggle" checked onchange="toggleAutoCheck()"> Tự động kiểm tra  
+    <input type="checkbox" id="autoCheckToggle" onchange="toggleAutoCheck()"> Tự động kiểm tra  
 </label>
 </div>
 
@@ -287,9 +283,8 @@
     <label style="margin-right:10px;"><input type="checkbox" id="hideV4Checkbox" onchange="toggleVFrame(4)"> Ẩn V4</label>
 </div>
 
-<div style="text-align: center;">
+    <div style="text-align: center;">
     <button onclick="prevWord()">Trước</button>
-    <button onclick="flipCard()">Lật Thẻ</button>
     <button onclick="nextWord()">Tiếp Theo</button>
     <button id="repeatButton" onclick="repeatPronunciation()">Lặp Lại</button>
     <button id="autoFlipButton" onclick="toggleAutoFlip()">Tự Động</button>
@@ -341,7 +336,7 @@
     let isRandomMode = false;
     let audioMapping = [];
     let sessionVocabList = [];
-    let isAutoCheckEnabled = true;
+    let isAutoCheckEnabled = false;
     let typingTimer;
     const doneTypingInterval = 1500;
 
@@ -443,10 +438,7 @@
         displayWord();
     }
 
-    function flipCard() {
-        isFront = !isFront;
-        displayWord();
-    }
+    /* flipCard removed: flipping behavior replaced by directly setting isFront=false and calling displayWord() where needed */
 
     function prevWord() {
         if (isRandomMode) {
@@ -498,7 +490,7 @@
     }  
 
     // Toggle visibility for the 4 writing frames (V1..V4)
-    // Behavior: checkbox checked => HIDE (matches other "Ẩn ..." checkboxes)
+    // Behavior: checkbox checked => HIDE textarea only (buttons remain visible)
     function toggleVFrame(n) {
         const map = {
             1: {ta: 'answerInput', btn: 'checkAnswerButton'},
@@ -510,14 +502,11 @@
         const target = map[n];
         if (!target || !cb) return;
         const ta = document.getElementById(target.ta);
-        const btn = document.getElementById(target.btn);
         if (cb.checked) {
             if (ta) ta.style.display = 'none';
-            if (btn) btn.style.display = 'none';
             try { if (ta && document.activeElement === ta) ta.blur(); } catch (e) {}
         } else {
             if (ta) ta.style.display = 'block';
-            if (btn) btn.style.display = 'inline-block';
         }
     }
 
@@ -616,9 +605,6 @@
                 break;
             case 'ArrowRight':
                 nextWord();
-                break;
-            case 'ArrowDown':
-                flipCard();
                 break;
             case 'ArrowUp':
                 repeatPronunciation();
@@ -838,7 +824,8 @@
                 if (!isFront) {
                     nextWord();
                 } else {
-                    flipCard();
+                    isFront = false;
+                    displayWord();
                 }
             } catch (e) {}
             }, autoIntervalMs);
@@ -930,7 +917,8 @@
                 if (isFront) {
                     // prevent displayWord() from replaying audio when we flip
                     skipPlayOnDisplay = true;
-                    flipCard();
+                    isFront = false;
+                    displayWord();
                     // give user a brief moment on the back, then advance
                     setTimeout(() => { nextWord(); }, 900);
                 } else {
@@ -999,7 +987,8 @@
             playPronunciation(expectedText, function() {
                 if (isFront) {
                     skipPlayOnDisplay = true;
-                    flipCard();
+                    isFront = false;
+                    displayWord();
                     setTimeout(() => { nextWord(); }, 900);
                 } else {
                     nextWord();
@@ -1032,12 +1021,13 @@
                 showNotification("Đúng!", true);
                 playPronunciation(word && word[0] ? word[0] : '', function() {
                     if (isFront) {
-                        skipPlayOnDisplay = true;
-                        flipCard();
-                        setTimeout(() => { nextWord(); }, 900);
-                    } else {
-                        nextWord();
-                    }
+                            skipPlayOnDisplay = true;
+                            isFront = false;
+                            displayWord();
+                            setTimeout(() => { nextWord(); }, 900);
+                        } else {
+                            nextWord();
+                        }
                 });
             } else {
                 showNotification("Sai!", false);
@@ -1107,7 +1097,8 @@
             playPronunciation(word && word[0] ? word[0] : '', function() {
                 if (isFront) {
                     skipPlayOnDisplay = true;
-                    flipCard();
+                    isFront = false;
+                    displayWord();
                     setTimeout(() => { nextWord(); }, 900);
                 } else {
                     nextWord();
